<resources>
    <string name="app_name">FormGDG</string>
    <string-array name="qualification">
        <item>Select Qualification</item>
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
        <item>5th Year</item>
        <item>Professional</item>
    </string-array>
    <string name="emailET">Your Email</string>
    <string name="nameET">Your Answer</string>
    <string name="collegeET">Your Answer</string>
    <string name="mobileET">Your Answer</string>
    <string name="linkET">Your Answer</string>
    <string name="facebookET">Your Answer</string>
    <string name="githubET">Your Answer</string>
    <string name="resumeET">Your Answer</string>
    <string name="VIPET">Your Answer</string>
    <string name="pastexpET">Your Answer</string>
    <string name="aboutET">Your Answer</string>
    <string name="namepersonET">Your Answer</string>
</resources>
