<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email address"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailET"
            android:id="@+id/emailET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameET"
            android:id="@+id/nameET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="College/Organisation"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/collegeET"
            android:id="@+id/collegeET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Year of Study?"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/qualificationSpn"
            android:entries="@array/qualification"
            android:layout_margin="20dp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mobile Number"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobileET"
            android:id="@+id/mobileET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:id="@+id/femaleRB"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:id="@+id/maleRB"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other"
                android:id="@+id/otherRB"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Age"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="40"
            android:min="20"
            android:id="@+id/ageSB"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What's your area of expertise?"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reaching Out(Companies/Colleges)"
            android:id="@+id/checkbox"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Designing"
            android:id="@+id/checkbox1"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Marketing"
            android:id="@+id/checkbox2"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Writing"
            android:id="@+id/checkbox3"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Programming"
            android:id="@+id/checkbox4"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Management"
            android:id="@+id/checkbox5"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Technologies you are good at?"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Python"
            android:id="@+id/checkbox6"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="JavaScript"
            android:id="@+id/checkbox7"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="React"
            android:id="@+id/checkbox8"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Angular"
            android:id="@+id/checkbox9"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HTML + CSS"
            android:id="@+id/checkbox10"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PHP"
            android:id="@+id/checkbox11"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Node.js"
            android:id="@+id/checkbox12"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SQL / NoSQL"
            android:id="@+id/checkbox13"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="C#"
            android:id="@+id/checkbox14"
            android:layout_margin="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Go"
            android:id="@+id/checkbox15"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Other:"
            android:id="@+id/checkbox16"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/otherET"/>
        </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Specializations you are working in?"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Web Development"
                android:id="@+id/checkbox17"
                android:layout_margin="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="App Development"
                android:id="@+id/checkbox18"
                android:layout_margin="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Software Development"
                android:id="@+id/checkbox19"
                android:layout_margin="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Data Science / ML / DL"
                android:id="@+id/checkbox20"
                android:layout_margin="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Blockchain"
                android:id="@+id/checkbox21"
                android:layout_margin="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cloud Computing"
                android:id="@+id/checkbox22"
                android:layout_margin="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DevOps"
                android:id="@+id/checkbox23"
                android:layout_margin="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Quantum Computing"
                android:id="@+id/checkbox24"
                android:layout_margin="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Competitive Programming"
                android:id="@+id/checkbox25"
                android:layout_margin="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Product Development"
                android:id="@+id/checkbox26"
                android:layout_margin="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cybersecurity"
                android:id="@+id/checkbox27"
                android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your Linkedin Profile"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/linkET"
            android:id="@+id/linkET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your Facebook Profile"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/facebookET"
            android:id="@+id/facebookET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your GitHub Profile"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/githubET"
            android:id="@+id/githubET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Link to your Resume"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/resumeET"
            android:id="@+id/resumeET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Why do you want to join VIP Programme, and be a Volunteer?"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/VIPET"
            android:id="@+id/VIPET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Share your past experience in which you have worked along side a community?"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pastexpET"
            android:id="@+id/pastexpET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Anything you'd like to tell us about you?"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/aboutET"
            android:id="@+id/aboutET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name of the person who referred you for this?"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namepersonET"
            android:id="@+id/namepersonET"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I agree to the terms and conditions of GDG"
            android:id="@+id/checkbox28"
            android:layout_margin="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textAllCaps="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="30dp"
            android:id="@+id/submitbtn"/>

    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>